--- a/source/sass/blocks/illustration.scss
+++ b/source/sass/blocks/illustration.scss
@@ -40,24 +40,51 @@
 
 @media (min-width: $screen-tablet) {
   .illustration {
+    padding-bottom: 0;
     background-color: #ffffff;
+
+    &::before {
+      content: "";
+      display: block;
+      width: 100%;
+      border-bottom: 1px solid $grey-2;
+    }
+  }
+
+  .illustration__count {
+    justify-content: stretch;
   }
 
   .illustration__wrapper {
     height: 420px;
+    margin-bottom: 20px;
+    padding-top: 27px;
+  }
+
+  .illustration__title {
+    margin-bottom: 40px;
+    letter-spacing: -1.9px;
   }
 
   .illustration__description {
     @include font (16, 1.5);
+    margin-bottom: 55px;
   }
 
   .illustration__expenses {
-    @include font (20, 1);
+    @include font (20, 1.5);
+    width: 195px;
+    margin: 0;
+    margin-left: auto;
+    text-align: right;
   }
 
   .illustration__slider {
-    height: 630px;
-    background-image: linear-gradient(#ffffff 33%, $grey-1 33%);
+    // height: 630px;
+    padding-bottom: 75px;
+    background-image: linear-gradient(to right, $grey-1 0%, #f2f2f2 50%, #eaeaea 50%, #eaeaea 100%);
+    background-position: 0 180px;
+    background-repeat: no-repeat;
   }
 }
 
