--- a/source/sass/blocks/function.scss
+++ b/source/sass/blocks/function.scss
@@ -48,6 +48,10 @@
 }
 
 @media (min-width: $screen-tablet) {
+  .function {
+    margin-bottom: 0;
+  }
+
   .function__title {
     margin-bottom: 20px;
     letter-spacing: -1.5px;
