--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,6 +1,3 @@
-.slider {
-
-}
 .slider__control {
   position: relative;
   display: flex;
@@ -15,6 +12,7 @@
   @include font(16, 1.25);
   color: $dark-3;
   text-transform: uppercase;
+
   &:first-of-type {
     margin-right: 19px;
   }
@@ -29,8 +27,6 @@
   border-radius: 15px;
 }
 
-
-
 .slider__button {
   position: absolute;
   top: 7px;
@@ -39,9 +35,51 @@
   height: 6px;
   background-color: $green-2;
   border-radius: 15px;
-
 }
 
 .slider__image-wrap {
   margin-bottom: 27px;
+}
+
+@media (min-width: $screen-tablet) { //320 -> 768
+  .slider__control {
+    position: relative;
+    width: auto;
+  }
+
+  .slider__text {
+    @include font(20, 1);
+
+    &:first-of-type {
+      margin-right: 0;
+    }
+  }
+
+  .slider__toggler {
+    width: 428px;
+    height: 6px;
+    margin: 0 22px;
+    background-color: #cdcdcd;
+    border: 0;
+  }
+
+  .slider__button {
+    position: absolute;
+    top: -8px;
+    width: 34px;
+    height: 34px;
+    background-color: #ffffff;
+    border: 2px solid #cdcdcd;
+    border-radius: 50%;
+    background-image: radial-gradient(circle closest-side, $green-1 3px, white 4px);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
+
+    &--before {
+      left: 48%;
+    }
+
+    &--after {
+      left: 48%;
+    }
+  }
 }
