--- a/source/sass/blocks/count.scss
+++ b/source/sass/blocks/count.scss
@@ -3,6 +3,10 @@
   color: $dark-3;
   text-transform: uppercase;
   letter-spacing: -1px;
+
+  @media (min-width: $screen-tablet) {
+    @include font (30, 1.2);
+  }
 }
 
 .count__subtext {
@@ -15,6 +19,20 @@
   @include font(12, 1);
   font-family: "Arial", sans-serif;
   background-color: $grey-1;
+
+  @media (min-width: $screen-tablet) {
+    top: 61px;
+    left: 14px;
+    width: 137px;
+    padding: 0 5px;
+
+    @include font (14, 1);
+    background-color: #ffffff;
+  }
+
+  @media (min-width: $screen-desktop) {
+    background-color: $grey-1;
+  }
 }
 
 .count__wrapper {
@@ -24,29 +42,10 @@
   padding: 15px 10px;
   text-align: center;
   border: 1px solid $grey-4;
-}
 
-@media (min-width: $screen-tablet) {
-  .count__wrapper {
+  @media (min-width: $screen-tablet) {
     width: 161px;
     margin-bottom: 0;
     margin-right: 45px;
-    // &:last-of-type {
-    //   // margin-right: 80px;
-    // };
-  }
-
-  .count__title {
-    @include font (30, 1.2);
-  }
-
-  .count__subtext {
-    top: 61px;
-    left: 14px;
-    width: 137px;
-    padding: 0 5px;
-
-    @include font (14, 1);
-    background-color: #ffffff;
   }
 }
