--- a/source/sass/blocks/wrapper.scss
+++ b/source/sass/blocks/wrapper.scss
@@ -6,6 +6,9 @@
   }
 
   @media (min-width: $screen-desktop) {
+    position: relative;
+    width: 1300px;
+    margin: 0 auto;
     padding: 0 40px;
   }
 }
