--- a/source/sass/main/variables.scss
+++ b/source/sass/main/variables.scss
@@ -12,6 +12,9 @@ $green-2: #68b738; // кнопка
 $screen-tablet: 768px;
 $screen-desktop: 1300px;
 
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
+
 $padding-mobile: 20px;
 $padding-tablet: 30px;
 $padding-desktop: 40px;
