--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,9 +1,28 @@
-@media (min-width: $screen-desktop) {
-  .header__navigation {
+.header__navigation {
+  @media (min-width: $screen-desktop) {
     position: relative;
-    width: 100%;
-    height: 690px;
+    z-index: 1;
+    height: 695px;
+    margin: 0 auto;
     padding-top: 50px;
+    margin-bottom: 82px;
     background-image: $right-gradient;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: -1;
+      width: 50%;
+      height: 100%;
+      background-image: url("/img/index-background-desktop@1x.jpg");
+      background-repeat: no-repeat;
+
+      @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+        background-image: url("/img/index-background-desktop@2x.jpg");
+        background-size: 100% auto;
+      }
+    }
   }
 }
