--- a/source/sass/blocks/illustration.scss
+++ b/source/sass/blocks/illustration.scss
@@ -1,19 +1,61 @@
 .illustration {
   padding-bottom: 37px;
   background-color: $grey-1;
-}
 
+  @media (min-width: $screen-tablet) {
+    padding-bottom: 0;
+    background-color: #ffffff;
+
+    &::before {
+      content: "";
+      display: block;
+      width: 100%;
+      border-bottom: 1px solid $grey-2;
+
+      @media (min-width: $screen-desktop) {
+        content: none;
+      }
+    }
+  }
+
+  @media (min-width: $screen-desktop) {
+    display: flex;
+    justify-content: center;
+    box-shadow: inset  0 0 1px  black;
+    background-image: linear-gradient(#ffffff 29%, $grey-1 29%);
+  }
+}
 
 .illustration__title {
   margin-bottom: 23px;
   line-height: 1.67;
   letter-spacing: -1.2px;
+
+  @media (min-width: $screen-tablet) {
+    margin-bottom: 40px;
+    letter-spacing: -1.9px;
+  }
+
+  @media (min-width: $screen-desktop) {
+    padding-top: 35px;
+    margin-bottom: 125px;
+  }
 }
 
 .illustration__description {
   margin: 0;
   margin-bottom: 25px;
   font-family: "Arial", sans-serif;
+
+  @media (min-width: $screen-tablet) {
+    @include font (16, 1.5);
+    margin-bottom: 55px;
+  }
+
+  @media (min-width: $screen-desktop) {
+    width: 435px;
+    margin-bottom: 68px;
+  }
 }
 
 .illustration__count {
@@ -21,6 +63,15 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+
+  @media (min-width: $screen-tablet) {
+    justify-content: stretch;
+  }
+
+  @media (min-width: $screen-desktop) {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
 }
 
 .illustration__expenses {
@@ -30,81 +81,64 @@
   text-transform: uppercase;
   color: $dark-3;
   letter-spacing: -0.3px;
+
+  @media (min-width: $screen-tablet) {
+    @include font (20, 1.5);
+    width: 195px;
+    margin: 0;
+    margin-left: auto;
+    margin-right: 7px;
+    text-align: right;
+  }
+
+  @media (min-width: $screen-desktop) {
+    width: 100%;
+    margin-top: 60px;
+    text-align: left;
+    letter-spacing: -0.5px;
+
+    span {
+      margin-left: 60px;
+    }
+  }
 }
 
 .illustration__wrapper {
   padding-top: 20px;
   padding-bottom: 35px;
   padding-right: 21px;
-}
 
-@media (min-width: $screen-tablet) {
-  .illustration {
-    padding-bottom: 0;
-    background-color: #ffffff;
-
-    &::before {
-      content: "";
-      display: block;
-      width: 100%;
-      border-bottom: 1px solid $grey-2;
-    }
-  }
-
-  .illustration__count {
-    justify-content: stretch;
-  }
-
-  .illustration__wrapper {
+  @media (min-width: $screen-tablet) {
     height: 420px;
     margin-bottom: 20px;
     padding-top: 27px;
   }
 
-  .illustration__title {
-    margin-bottom: 40px;
-    letter-spacing: -1.9px;
-  }
-
-  .illustration__description {
-    @include font (16, 1.5);
-    margin-bottom: 55px;
-  }
-
-  .illustration__expenses {
-    @include font (20, 1.5);
-    width: 195px;
+  @media (min-width: $screen-desktop) {
+    width: 610px;
+    height: 652px;
     margin: 0;
-    margin-left: auto;
-    text-align: right;
+    padding: 0;
+    box-shadow: inset  0 0 1px  black;
+    // background-image: linear-gradient(#ffffff 33%, $grey-1 33%);
   }
+}
 
-  .illustration__slider {
+.illustration__slider {
+  @media (min-width: $screen-tablet) {
     // height: 630px;
     padding-bottom: 75px;
     background-image: linear-gradient(to right, $grey-1 0%, #f2f2f2 50%, #eaeaea 50%, #eaeaea 100%);
     background-position: 0 180px;
     background-repeat: no-repeat;
   }
-}
 
-@media (min-width: $screen-desktop) {
-  .illustration {
-    display: flex;
-  }
-
-  .illustration__wrapper {
-    // min-width: 610px;
+  @media (min-width: $screen-desktop) {
+    box-shadow: inset  0 0 1px  red;
+    width: 610px;
+    padding: 0;
     height: 652px;
-    // padding-left: $padding-desktop;
-    background-image: linear-gradient(#ffffff 33%, $grey-1 33%);
-  }
-
-  .illustration__slider {
-    min-width: 610px;
-    height: 652px;
-    // padding-right: $padding-desktop;
-    background-color: #ffffff;
-    background-image: linear-gradient(#ffffff 33%, $grey-1 33%);
+    background-image: linear-gradient(to right, $grey-1 0%, #f2f2f2 53%, #eaeaea 53%, #eaeaea 100%);
+    background-position: 0 188px;
   }
 }
