--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,11 +1,36 @@
-.map__stat {
+.map {
   position: relative;
-  width: 100%;
-  height: 362px;
 }
 
-@media (min-width: $screen-tablet) {
-  .map__stat {
+.map__static {
+  width: 100%;
+  height: 362px;
+
+  @media (min-width: $screen-tablet) {
     height: 396px;
+  }
+
+  @media (min-width: $screen-desktop) {
+    height: 400px;
+  }
+}
+
+.map__interactive {
+
+  position: absolute;
+  top: 111px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  min-height: 362px;
+  z-index: 1;
+
+  @media (min-width: $screen-tablet) {
+    top: 200px;
+    min-height: 396px;
+  }
+
+  @media (min-width: $screen-desktop) {
+    top: 0;
   }
 }
