--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -4,33 +4,31 @@
 
   @include font(36, 1.67);
 
+  @media (min-width: $screen-tablet) {
+    font-size: 60px;
+    line-height: 1;
+    text-align: left;
+  }
+
   &--stripe {
     display: flex;
 
     @include font(24, 1);
     text-align: left;
 
-    &::after {
-      content: "";
-      align-self: center;
-      flex-grow: 1;
-      // margin-top: 15px;
-      margin-left: 5px;
-      width: 10px;
-      height: 3px;
-      background-color: $green-2;
-    }
-  }
-}
-
-@media (min-width: $screen-tablet) {
-  .title {
-    font-size: 60px;
-    line-height: 1;
-    text-align: left;
-
-    &--stripe {
+    @media (min-width: $screen-tablet) {
       @include font(36, 1);
     }
+  }
+
+  &--stripe::after {
+    content: "";
+    align-self: center;
+    flex-grow: 1;
+    // margin-top: 15px;
+    margin-left: 5px;
+    width: 10px;
+    height: 3px;
+    background-color: $green-2;
   }
 }
