--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -9,8 +9,8 @@
     align-items: center;
     padding-top: 55px;
     padding-bottom: 55px;
-    padding-left: $padding-mobile;
-    padding-right: $padding-mobile;
+    padding-left: $padding-tablet;
+    padding-right: $padding-tablet;
   }
 
   @media (min-width: $screen-desktop) {
