--- a/source/sass/blocks/wrapper.scss
+++ b/source/sass/blocks/wrapper.scss
@@ -1,12 +1,16 @@
 .wrapper {
   padding: 0 20px;
 
+  &--grey {
+    background-color: $grey-1;
+  }
+
   @media (min-width: $screen-tablet) {
     padding: 0 30px;
   }
 
   @media (min-width: $screen-desktop) {
-    position: relative;
+    // position: relative;
     width: 1300px;
     margin: 0 auto;
     padding: 0 40px;
